--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         }
     ],
     "require": {
-        "php": ">=5.6.4"
+        "php": ">=5.6.4",
+        "illuminate/support": "5.4.*"
     },
     "require-dev": {
         "phpunit/phpunit": "5.5.*"
