--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,11 @@
     ],
     "require": {
         "php": ">=5.6.4",
-        "illuminate/support": "5.4.*"
+        "laravel/framework": "5.4.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.5.*"
+        "phpunit/phpunit": "5.5.*",
+        "orchestra/testbench": "~3.0"
     },
     "autoload": {
         "psr-4": {
