--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "jjsquady/round-robin",
-    "description": "RoundRobin for Laravel 5.4+.",
+    "name": "teka/round-robin",
+    "description": "RoundRobin for Laravel 5.8+.",
     "keywords": ["laravel", "roundrobin"],
     "license": "MIT",
     "authors": [
@@ -12,11 +12,15 @@
             "name": "Michael P. Nitowski",
             "email": "mpnitowski@gmail.com",
             "homepage": "http://mnito.co"
+        },
+        {
+            "name": "Jorge Gonçalves Junior",
+            "email": "jorge.techinfo@gmail.com"
         }
     ],
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "5.4.*"
+        "laravel/framework": "5.8.*",
+        "php": "^5.3.3 || ^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "5.5.*",
@@ -24,7 +28,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Laravel\\RoundRobin\\": "src/"
+            "Teka\\RoundRobin\\": "src/"
         }
     }
 }
