--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "require": {
         "laravel/framework": "5.8.*",
-        "php": "^5.3.3 || ^7.0"
+        "php": "^7.1.3"
     },
     "require-dev": {
         "phpunit/phpunit": "5.5.*",
