--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "5.5.*",
-        "orchestra/testbench": "~3.0"
+        "orchestra/testbench": "3.8.x"
     },
     "autoload": {
         "psr-4": {
