--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "php": "^7.1.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.5.*",
+        "phpunit/phpunit": "^7.5",
         "orchestra/testbench": "3.8.x"
     },
     "autoload": {
